Compile for java 8, 11, and 17